Edited the layout of topAppBar for CollectionFragment

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -121,6 +121,8 @@
     <string name="snack_bar_empty_collection_name">Il nome della collezione non può essere vuoto.</string>
     <string name="create_new_collection">Crea una nuova collezione</string>
     <string name="imageview_avatar">Avatar dell\'utente</string>
+    <string name="delete_collection_action">Elimina la collezione</string>
+    <string name="rename_collection_action">Rinomina la collezione</string>
 
     <!-- errors -->
     <string name="username_already_taken">Nome utente già in uso</string>
