--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,6 +134,8 @@
     <string name="snack_bar_empty_collection_name">Collection\'s name cannot be empty</string>
     <string name="create_new_collection">Create a new collection</string>
     <string name="imageview_avatar">Avatar of the user</string>
+    <string name="delete_collection_action">Delete the collection</string>
+    <string name="rename_collection_action">Rename the collection</string>
 
     <!-- errors -->
     <string name="username_already_taken">Username already taken</string>
