--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,5 +188,7 @@
     <string name="field_not_filled_in">Fill in the field</string>
     <string name="error_password_length">Password length must be 6 characters or higher</string>
     <string name="error_confirm_password_equal">Confirm Password must be equal to Password field</string>
+    <string name ="error_gender"> Select a valid gender identity</string>
+    <string name = "error_not_enough_genre">Select at least 3 topic of interest </string>
 
 </resources>
