--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="navigation_bar_item_profile">Profile</string>
     <string name="navigation_bar_item_saved">Saved</string>
     <string name="navigation_bar_item_search">Search</string>
+    <string name="navigation_bar_label_image_selector">Select the avatar</string>
     <string name="new_account">No account yet?</string>
 
     <!-- pa sta per personal area -->
