--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -127,6 +127,7 @@
     <string name="rename_collection_confirm_message">Scrivi il nuovo nome della collezione</string>
     <string name="confirm_action">Conferma</string>
     <string name="cancel_action">Annulla</string>
+    <string name="no_results_found">Nessun risultato trovato.\n Prova a cercare qualcos\'altro!</string>
 
     <!-- chip genres -->
     <string-array name="chip_genres">
@@ -164,6 +165,7 @@
     <!-- plurals -->
     <plurals name="books">
         <item quantity="one">%d libro</item>
+        <item quantity="many">%d libri</item>
         <item quantity="other">%d libri</item>
     </plurals>
 
