--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,7 +162,7 @@
     <string name="content_description_logo_startup">Application logo, loading…</string>
     <string name="textview_select_avatar">Select your profile picture</string>
     <string name="content_description_button_edit_profile">Button to confirm profile changes</string>
-
+    <string name="textview_already_registered">Do you already have an account?</string>
 
 
     <!-- chip genres -->
