Refactored classes names

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -39,7 +39,7 @@
 
     <string name="pa_collections">Raccolte</string>
     <string name="pa_notes">Note</string>
-    <string name="pa_settings">Impostazioni</string>
+    <string name="pa_edit_profile">Modifica profilo</string>
     <string name="pa_stats">Statistiche</string>
     <string name="pa_title">La Mia Area Personale</string>
 
