--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="pa_description_arrow" translatable="false">arrow right</string>
     <string name="pa_description_photo" translatable="false">personal area photo</string>
     <string name="pa_notes">Notes</string>
-    <string name="pa_settings">Settings</string>
+    <string name="pa_edit_profile">Edit profile</string>
     <string name="pa_stats">Statistics</string>
     <string name="pa_title">My Personal Area</string>
 
