--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,7 +96,7 @@
     <string name="book_search_error">An error occurred during the search, please retry.</string>
     <string name="description_not_available">This book does not provide a description. Feel free to explore its content through reviews or comments for more information</string>
     <string name="empty_search_snackbar">The searchbar is empty</string>
-    <string name="textview_home_suggested">Suggested for you</string>
+    <string name="textview_home_recommended">Recommended for you</string>
     <string name="textview_new_books">New Books</string>
     <string name="textview_loading">Loading…</string>
     <string name="rating_not_available">Rating not available</string>
