--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -157,6 +157,7 @@
     <string name="change_collection_visibility_action">Visibilità</string>
     <string name="no_collections_found">Nessuna collezione trovata.\nQuesto utente non ha nessuna collezione pubblica!</string>
     <string name="private_profile_message">Questo utente ha il profilo privato.\nPer vedere le sue collezioni, dovete seguirvi a vicenda.</string>
+    <string name="empty_biography_message">Non hai ancora inserito una biografia. Puoi aggiungerla nella sezione modifica profilo.</string>
 
     <!-- chip genres -->
     <string-array name="chip_genres">
