--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -167,6 +167,12 @@
     <string name="no_collections_found">No collection found.\nThis user has no public collection!</string>
     <string name="private_profile_message">This user has a private profile.\nTo see his collections, you must follow each other.</string>
     <string name="empty_biography_message">You don\'t have set a biography yet. You can add it in the edit profile section.</string>
+    <string name="error_add_book_to_collection">Error: add to collection failed</string>
+    <string name="error_remove_book_from_collection">Error: remove from collection failed</string>
+    <string name="error_logout">An error occurred during logout</string>
+    <string name="error_local_database">Local database error</string>
+
+
 
     <!-- chip genres -->
     <string-array name="chip_genres">
